src/main/java/com/example/bankcards/exception/error/ConflictException.java
package com.example.bankcards.exception.error;

public class ConflictException extends RuntimeException {
    public ConflictException(String message) {
        super(message);
    }
}
